# cachercise

./: CMakeLists.txt  README.md  initial-setup.json
.github/: initial-setup.py
examples/: CMakeLists.txt  admin.c  cachebench-sweep-xstreams.lsf  cachebench-sweep.lsf  cachebench.c  cachebench.lsf  cachercise-client.json  cachercise-server.json  cachercise-server.jx9  cachercize-server.json  client.c  json-macros.h  server.c
experiments/20core/: cachebench.2134765
include/alpha/: alpha-admin.h  alpha-backend.h  alpha-resource.h  alpha-server.h
include/cachercise/: cachercise-admin.h  cachercise-backend.h  cachercise-cache.h  cachercise-client.h  cachercise-common.h  cachercise-provider-handle.h  cachercise-server.h
include/cachercize/: cachercize-admin.h  cachercize-backend.h  cachercize-cache.h  cachercize-client.h  cachercize-common.h  cachercize-provider-handle.h  cachercize-server.h
scripts/: updates-vs-xstreams.gp
src/: CMakeLists.txt  admin.c  admin.h  alpha-admin.pc.in  alpha-client.pc.in  alpha-server.pc.in  bedrock-module.c  cachercise-admin.pc.in  cachercise-client.pc.in  cachercise-config.cmake.in  cachercise-server.pc.in  cachercize-admin.pc.in  cachercize-client.pc.in  cachercize-config.cmake.in  cachercize-server.pc.in  client.c  client.h  hoard-c.h  hoard.cc  hoard.hpp  provider.c  provider.h  types.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  test-admin.c  test-client.c
